--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,28 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+/* Table of Content Css */
+.tableOfContentContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.tableOfContentContainer a {
+  transition: 0.2s ease-in;
+  padding: 1em;
+  margin: 1em;
+  max-width: 12em;
+  flex: 1 0 8em;
+  border-radius: 5px;
+  box-shadow: 0 0 0.1rem var(--ifm-color-primary);
+}
+
+.tableOfContentContainer a:hover {
+  text-decoration: none;
+  transform: scale(1.2);
+  color: var(--ifm-color-primary-darkest);
+  background-color: var(--ifm-color-primary-lightest);
+  font-weight: bold;
+  box-shadow: 0 0 0.1px 0.1rem var(--ifm-color-primary);
+}
