update the info, home page detail

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -10,6 +10,7 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  height: 80vh;
 }
 
 @media screen and (max-width: 966px) {
@@ -29,6 +30,8 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  min-height: 80vh;
+  text-align: center;
 }
 
 .featureImage {
